# ood

./: .clang-format  .gitignore  README.md
lw1/: CMakeLists.txt  README.md  main.cpp
lw1/Shapes/: CMakeLists.txt  diagram.md  main.cpp
lw1/Shapes/src/commands/: CommandController.cpp  CommandController.h  ShapesController.cpp  ShapesController.h  ShapesFactory.cpp  ShapesFactory.h
lw1/Shapes/src/draw/: ICanvas.h  SFMLCanvas.cpp  SFMLCanvas.h
lw1/Shapes/src/shapes/: IShapeStrategy.h  Picture.cpp  Picture.h  Point.h  Shape.cpp  Shape.h
lw1/Shapes/src/shapes/strategy/: IShapeStrategy.h  ShapesStrategies.h
lw1/Shapes/tests/: MockCanvas.h  ShapesTests.cpp
lw1/SimUDuck/: CMakeLists.txt  ducks.drawio  main.cpp
lw1/SimUDuck/lib/: DuckFunctions.h
lw1/SimUDuck/lib/Duck/: DecoyDuck.h  Duck.h  MallardDuck.h  ModelDuck.h  RedheadDuck.h  RubberDuck.h
lw1/SimUDuck/lib/Duck/Dance/: IDanceBehavior.h  MinuetDance.h  MinuetDanceBehavior.h  NoDance.h  NoDanceBehavior.h  WaltzDance.h  WaltzDanceBehavior.h
lw1/SimUDuck/lib/Duck/Fly/: FlyNoWay.h  FlyWithWings.h  FlyWithWingsBeforeFlight.h  IFlyBehavior.h
lw1/SimUDuck/lib/Duck/Quack/: IQuakBehavior.h  MuteQuackBehavior.h  QuackBehavior.h  SqueakBehavior.h
lw1/SimUDuck/tests/: DanceTests.cpp  DuckBehaviorTests.cpp  FlightPleasureTests.cpp  MockDanceBehavior.h  MockDuck.h  MockFlyBehavior.h  MockQuackBehavior.h  TestDuck.h  TestDuckWithMocks.h
lw1/SimUDuckFunctional/: CMakeLists.txt  README.md  main.cpp
lw1/SimUDuckFunctional/lib/: DuckFunctions.h
lw1/SimUDuckFunctional/lib/Duck/: DecoyDuck.h  Duck.h  MallardDuck.h  ModelDuck.h  RedheadDuck.h  RubberDuck.h
lw1/SimUDuckFunctional/lib/Duck/Dance/: DanceBehaviorFunctions.h
lw1/SimUDuckFunctional/lib/Duck/Fly/: FlyBehaviorFunctions.h
lw1/SimUDuckFunctional/lib/Duck/Quack/: QuackBehaviorFunctions.h
lw1/SimUDuckFunctional/tests/: DuckBehaviorTests.cpp  FunctionalDuckBehaviorTests.cpp
lw2/WeatherStation/: CMakeLists.txt  main.cpp
lw2/WeatherStation/src/: Display.h  Observer.h  WeatherData.h
